----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-01-05 Alexander M. Turek  <rumors@derrabus.de>
    * tbl_properties_operations.php: Changing a table's charset changed the
      charset of all fields (MySQL >= 4.1.1).

2004-01-04 Alexander M. Turek  <beggaronabeachofgold@derrabus.de>
    * libraries/config_import.lib.php: Added missing compatibility code for
      $cfg['RecodingEngine'].

2004-01-02 Alexander M. Turek  <wecantdance@derrabus.de>
    * libraries/mysql_charsets.lib.php, libraries/sqlparser.lib.php:
      MySQL collations are now parsed and highlighted.
    * libraries/export/sql.php: Include charset / collation information in db
      export.

2004-01-02 Marc Delisle  <lem9@users.sourceforge.net>
    * db_details_structure.php: bug 868996, debug code still in place,
      thanks to Matthias Fichtner (mfichtner)
    * browse_foreigners.php: paging does not work; obey RepeatCells=0
    * libraries/display_tbl.lib.php: bug 857743, SHOW FIELDS

2003-12-30 Michal Cihar  <happynewyer@cihar.com>
    * lang/czech: Updated.
    * lang/*: Fixed typo s/Chech-Slovak/Czech-Slovak/.

2003-12-30 Alexander M. Turek  <facevalue@derrabus.de>
    * config.inc.php, db_details_common.php, db_details_structure.php,
      tbl_properties_operations.php, css/phpmyadmin.css.php,
      libraries/common.lib.php, libraries/config_import.lib.php,
      libraries/mysql_charsets.lib.php, libraries/sqlparser.lib.php:
      - SQL parser detected the character set "binary" as column attribute;
      - MySQL charsets are now parsed and highlighted - Note: the SQL parser
        library now has to be included AFTER having connected to the MySQL
        server;
      - The default charset of a database may now be changed;
      - Ensured that the user's connection is used for setting and retreiving
        charset information.
      * libraries/defines.lib.php: typo.

2003-12-30 Marc Delisle  <lem9@users.sourceforge.net>